[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actions-toolkit = { git = "https://github.com/dev-bio/actions-toolkit.git", rev = "f7888e2fc67eda2b0cc7a552d8dccdaaff1aceb3" }
anyhow = "1.0.71"
secrecy = "0.8.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "blocking", "stream"] }
base64 = "0.21.2"
async-recursion = "1.0.4"
futures = "0.3.28"
glob = "0.3.1"
http = "0.2.9"
backoff = "0.4.0"
retry = "2.0.0"
thiserror = "1.0.43"
chrono = { version = "0.4.26", features = ["serde"] }
serde_yaml = "0.9.25"
minimad = "0.12.0"
zip = "0.6.6"
bytes = "1.4.0"
